# AgentMCP

./: .cursorrules  .gitignore  AGENT.md  CLAUDE.md  Design.md  Install.md  LEARN.md  Project.md  README.md  SmokeTest.md  config.toml  pyproject.toml
.agents/: AGENT.md
.agents/skills/role-plan/: SKILL.md
.agents/skills/role-research/: SKILL.md
.agents/skills/scott-plot/: SKILL.md
.agents/skills/scott-plot/references/: cookbook-catalog.md  examples.md  reference.md
.agents/skills/skia/: SKILL.md
.agents/skills/skia/references/: basics.md  bitmaps.md  curves.md  effects.md  examples.md  gallery.md  paths.md  transforms.md
.claude/: settings.json  settings.local.json
examples/my-project/: README.md  skillmcp.toml
examples/my-project/.agents/: AGENT.md
rules/: persona.md
rules/active/: memory_proposal_workflow.md  persona.md  prompt_rewrite.md  session_start.md  verify_memory_proposals.md
scratch/: async_test.py  check_lock.py  minimal_mcp.py  test_minimal.py  test_proper_mcp.py  test_server.py  test_server_v2.py  time_config.py
sessions/: README.md  log.md
skills/: _candidates.md  index.md  prompt-rewriter.md  session-start.md
skills/planer/: SKILL.md
skills/researcher/: SKILL.md
skills/role-plan/: SKILL.md
skills/role-research/: SKILL.md
skills/roles/: refactorer.md  researcher.md
skills/skills-mcp-verify/: SKILL.md
src/agent_mcp/: __init__.py  app_state.py  cli.py  clusters.py  config.py  doctor.py  metrics.py  paths.py  problems.py  server.py  session_logging.py
src/agent_mcp/bundled/: __init__.py  config.toml
src/agent_mcp/bundled/rules/: CHANGELOG.md
src/agent_mcp/bundled/skills/: prompt-rewriter.md  session-start.md
src/agent_mcp/rules/: loader.py  schema.py  service.py
src/agent_mcp/skills/: loader.py  schema.py
src/skills_mcp/: __init__.py  __main__.py  analyze.py  app_state.py  cli.py  config.py  config_paths.py  doctor.py  hooks.py  lockfile.py  mcp_registration.py  paths.py  security.py  server.py  session_logging.py  sessions.py  telemetry.py  usage_counters.py  usage_logs.py
src/skills_mcp/bundled/: AGENT.md  Project.md  __init__.py  config.toml  skillmcp.toml
src/skills_mcp/rules/: __init__.py  instructions.py  loader.py  schema.py  service.py
src/skills_mcp/skills/: __init__.py  loader.py  schema.py
tests/: conftest.py  integration_runner.py  test_agent_injection.py  test_analyze.py  test_audit_and_verify.py  test_content_dir.py  test_flag_problem.py  test_hooks.py  test_init.py  test_integration.py  test_lockfile.py  test_mcp_registration.py  test_memory.py  test_metrics.py  test_project_doc.py  test_rules.py  test_rules_instructions_seed.py  test_server_tools_json.py  test_skill_library_merge.py  test_skills.py  test_telemetry.py  test_usage_tracing.py
(+2 files in other folders)
