[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-mcp"
version = "0.1.0"
description = "Local MCP server: shared skills, memory, and rules (AgentBridge)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.0",
    "tomli>=2.0.1",
    "chromadb>=0.5.0",
    "fastembed>=0.3.0",
    "rank-bm25>=0.2.2",
    "PyYAML>=6.0",
    "python-ulid>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
agent-mcp = "agent_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_mcp = ["bundled/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
