[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skills-mcp"
version = "0.1.0"
description = "Local MCP server: shared skills and rules across harnesses."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.0",
    "tomli>=2.0.1",
    "PyYAML>=6.0",
    "python-ulid>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
# Install vaderSentiment so gemini-docter's sentiment signals work.
# gemini-docter itself needs no install — just set paths.gemini_docter in config.toml.
dr = [
    "vaderSentiment>=3.3.2",
]

[project.scripts]
# Canonical name; ``agent-mcp`` is a legacy alias (Cursor configs, env AGENT_MCP_ROOT).
skills-mcp = "skills_mcp.cli:main"
agent-mcp = "skills_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skills_mcp = ["bundled/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
